--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
             </nav>
         </header>
         <main>
-            <h3>From teens to adults</h3>
+            <h3>I really like those images</h3>
             <p class="fancy-class" info="editor-note">Look at this sweet couple.</p>
-            <img id="couple-images" src="images/blond-teen.jpg" alt="Zdjęcie pary 
-            wygenerowane przez portal AITubo."/>
+            <img id="couple-images" src="images/img1.jpg" alt="Zdjęcie pary."/>
         </main>
         <aside>
             <button>Change user</button>
